[package]
name = "skate-tg-bot"
version = "0.1.0"
authors = ["Evgenii P. <eupn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tracing-subscriber = "0.1.5"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" } # Polls support is not published on crates.io
lazy_static = "1.4.0"
indexmap = { version = "1.6.0", features = ["serde-1"] }
serde = "1.0.116"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
dropbox-sdk = "0.5.0"
rand = "0.7.3"
